manifest/objects/Legacy_Id__c.object
<CustomObject>
    <fields>
        <fullName>Master_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>ID of account that won the merge.</description>
        <label>Master Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Legacy Ids</relationshipLabel>
        <relationshipName>Legacy_Ids</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Misc_Data__c</fullName>
        <description>Misc data based on any additional information from duplicate accounts</description>
        <inlineHelpText>Any additional data that need to be collected from a dupe account, use this field, like Policy Number for Canada</inlineHelpText>
        <label>Misc Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_Name__c</fullName>
        <label>Original Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <label>Source Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>HUB</fullName>
                </value>
                <value>
                    <fullName>TD</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>guid__c</fullName>
        <label>GUID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <label>Legacy Id</label>
    <nameField>
        <displayFormat>LID-{00000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legacy Ids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>